// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ANi > [ANi] Amagamisan Chi no Enmusubi / 結緣甘神神社 - 12 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "結緣甘神神社",
  "titles": [
    "Amagamisan Chi no Enmusubi",
  ],
}
`;

exports[`ANi > [ANi] Kakushite Makina San - 快藏好！瑪琪娜同學!! - 02 [1080P][Baha][WEB-DL][AAC AVC][CHT] 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "快藏好！瑪琪娜同學!!",
  "titles": [
    "Kakushite Makina San",
  ],
}
`;

exports[`ANi > [ANi] Lazarus - LAZARUS 拉撒路 - 02 [1080P][Baha][WEB-DL][AAC AVC][CHT] 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "LAZARUS 拉撒路",
  "titles": [
    "Lazarus",
  ],
}
`;

exports[`ANi > [ANi] Neko ni Tensei Shita Ojisan - 轉生成貓咪的大叔 - 27 [1080P][Baha][WEB-DL][AAC AVC][CHT] 1`] = `
{
  "episode": {
    "number": 27,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "轉生成貓咪的大叔",
  "titles": [
    "Neko ni Tensei Shita Ojisan",
  ],
}
`;

exports[`ANi > [ANi] Seirei Gensouki / 精靈幻想記 2 - 11 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "season": {
    "number": 2,
  },
  "source": "WEB-DL",
  "tags": [],
  "title": "精靈幻想記",
  "titles": [
    "Seirei Gensouki",
  ],
}
`;

exports[`ANi > [ANi] ZatsuTabi Thats Journey - 隨興旅－That′s Journey－ - 02 [1080P][Baha][WEB-DL][AAC AVC][CHT] 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "隨興旅－That′s Journey－",
  "titles": [
    "ZatsuTabi Thats Journey",
  ],
}
`;

exports[`ANi > [ANi] 不會拿捏距離的阿波連同學 第二季（僅限港澳台地區） - 02 [1080P][Bilibili][WEB-DL][AAC AVC][CHT CHS] 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHS",
  "platform": "Bilibili",
  "source": "WEB-DL",
  "tags": [],
  "title": "不會拿捏距離的阿波連同學 第二季（僅限港澳台地區）",
}
`;

exports[`ANi > [ANi] 妖怪學校的菜鳥老師 - 11 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "妖怪學校的菜鳥老師",
}
`;

exports[`ANi > [ANi] 最狂輔助職業【話術士】世界最強戰團聽我號令 - 12 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "最狂輔助職業【話術士】世界最強戰團聽我號令",
}
`;

exports[`ANi > [ANi] 鴨乃橋論的禁忌推理 - 24 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4] 1`] = `
{
  "episode": {
    "number": 24,
  },
  "fansub": {
    "name": "ANi",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
      "term": "AVC",
    },
  },
  "language": "CHT",
  "platform": "Baha",
  "source": "WEB-DL",
  "tags": [],
  "title": "鴨乃橋論的禁忌推理",
}
`;
